--- a/views/main.pug
+++ b/views/main.pug
@@ -10,6 +10,34 @@ html
 		meta(name='keywords', content='Eduardo Velasco, Eduardo, Velasco, portfolio, work, personal')
 		//- link(rel='shortcut icon', href='favicon.ico', type='image/vnd.microsoft.icon')
 		//- link(rel='stylesheet', href='//fonts.googleapis.com/css?family=font1|font2|etc', type='text/css')
-		//- link(rel='stylesheet', href='stylesheet.css', type='text/css')
+		link(rel='stylesheet', href='/build/main.css', type='text/css')
 	body
-		p Hello world!
+		.site-wrapper
+			.site-wrapper-inner
+				.cover-container
+					.masthead.clearfix
+						.inner
+							h3.masthead-brand Cover
+							nav
+								ul.nav.masthead-nav
+									li.active
+										a(href='#') Home
+									li
+										a(href='#') Features
+									li
+										a(href='#') Contact
+					.inner.cover
+						h1.cover-heading Cover your page.
+						p.lead
+							| Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.
+						p.lead
+							a.btn.btn-lg.btn-default(href='#') Learn more
+					.mastfoot
+						.inner
+							p
+								| Cover template for 
+								a(href='http://getbootstrap.com') Bootstrap
+								| , by 
+								a(href='https://twitter.com/mdo') @mdo
+								| .
+		script(src="/build/portfolio.js" type="text/javascript")
