--- a/views/main.pug
+++ b/views/main.pug
@@ -1,7 +1,7 @@
 doctype html
 html
 	head
-		title Eduardo J. Velasco
+		title Eduardo Velasco
 		meta(charset='UTF-8')
 		meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
 		meta(name='viewport', content='width=device-width,initial-scale=1')
@@ -17,13 +17,15 @@ html
 				.cover-container
 					.masthead.clearfix
 						.inner
-							h3.masthead-brand Cover
+							h3.masthead-brand E | V
 							nav
 								ul.nav.masthead-nav
-									li.active
+									li
 										a(href='#') Home
 									li
-										a(href='#') Features
+										a(href='#') Projects
+									li
+										a(href='#') About
 									li
 										a(href='#') Contact
 					.inner.cover
