great improvements to cover page

--- a/views/main.pug
+++ b/views/main.pug
@@ -21,25 +21,25 @@ html
 							nav
 								ul.nav.masthead-nav
 									li
-										a(href='#') Home
+										a Home
 									li
-										a(href='#') Projects
+										a Projects
 									li
-										a(href='#') About
+										a About
 									li
-										a(href='#') Contact
+										a Contact
 					.inner.cover
-						h1.cover-heading Cover your page.
+						h1.cover-heading Eduardo Velasco
+						p.lead Welcome to my portfolio.
 						p.lead
-							| Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.
-						p.lead
-							a.btn.btn-lg.btn-default(href='#') Learn more
+							span(class='glyphicon glyphicon-menu-right arrow')
 					.mastfoot
 						.inner
-							p
-								| Cover template for 
-								a(href='http://getbootstrap.com') Bootstrap
-								| , by 
-								a(href='https://twitter.com/mdo') @mdo
-								| .
+							ul.social-links
+								li 
+									a(class="entypo-twitter icon" href="https://twitter.com/velascoDev" target="blank")
+								li 
+									a(class="entypo-github icon" href="https://github.com/velascoDev" target="blank")
+								li 
+									a(class="entypo-linkedin icon" href="https://www.linkedin.com/in/ejvelasco/" target="blank")
 		script(src="/build/portfolio.js" type="text/javascript")
