--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -1,10 +1,45 @@
 @import url('http://fonts.googleapis.com/css?family=Raleway:300,500,700');
+@import url('http://weloveiconfonts.com/api/?family=entypo');
 @import url('/bootstrap/css/bootstrap.css');
+//social icons
+[class*="entypo-"]:before {
+  font-family: 'entypo', sans-serif;
+}
+.social-links {
+  list-style: none !important;
+  padding: 0 !important;
+}
+.social-links li {
+  display: inline-block !important;
+}
+.social-links a {
+  margin-right: 20px;
+  margin-left: 20px;
+  font-size: 2.1em;
+  color: white;
+  text-decoration: none !important;
+  transition: .3s ease;
+  &:hover {
+    color: rgba(255, 255, 255, .5)  
+  }
+}
+.arrow {
+  cursor: pointer;
+  font-size: 1.4em;
+  color: rgba(255, 255, 255, .5)
+}
 //mixins
-@mixin elegant { 
+@mixin elegant($size) { 
   font-family: Raleway;
   text-transform: uppercase;
-  letter-spacing: 5px;
+  letter-spacing: 7px;
+  font-size: $size;
+  font-weight: lighter;
+  color: white;
+}
+@mixin elegant-snippet { 
+  font-family: Raleway;
+  letter-spacing: 4px;
   font-weight: lighter;
   color: white;
 }
@@ -38,8 +73,17 @@ body {
   margin-right: auto;
   margin-left: auto;
 }
+.cover-heading {
+  @include elegant(4em);
+}
 .inner {
-  padding: 30px;
+  padding-top: 30px;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-bottom: 10px;
+}
+.lead {
+  @include elegant-snippet;
 }
 .masthead-brand {
   margin-top: 10px;
@@ -49,13 +93,21 @@ body {
     display: inline-block;
 }
 .masthead-nav li a {
-  @include elegant;
+  @include elegant(1em);
+  transition: .3s ease;
+  cursor: pointer;
   &:hover {
     background-color: transparent !important;
+    color: rgba(255, 255, 255, .5);  
   }
   &:focus {
     background-color: transparent !important;
   }
+}
+@media (max-width: 768px) {
+  .cover-heading {
+    @include elegant(3.1em);
+  } 
 }
 @media (min-width: 768px) {
   .masthead-brand {
