--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -23,10 +23,23 @@
     color: rgba(255, 255, 255, .5)  
   }
 }
+//arrow
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    right: 0;
+  }
+  40% {
+    right: -25px;
+  }
+  60% {
+    right: -12px;
+  }
+}
 .arrow {
   cursor: pointer;
   font-size: 1.4em;
-  color: rgba(255, 255, 255, .5)
+  color: rgba(255, 255, 255, .5);
+  animation: bounce 1.8s infinite;
 }
 //mixins
 @mixin elegant($size) { 
