--- a/views/main.pug
+++ b/views/main.pug
@@ -8,8 +8,6 @@ html
 		meta(name='author', content='Eduardo Velasco')
 		meta(name='description', content='Personal space of Eduardo Velasco')
 		meta(name='keywords', content='Eduardo Velasco, Eduardo, Velasco, portfolio, work, personal')
-		//- link(rel='shortcut icon', href='favicon.ico', type='image/vnd.microsoft.icon')
-		//- link(rel='stylesheet', href='//fonts.googleapis.com/css?family=font1|font2|etc', type='text/css')
 		link(rel='stylesheet', href='/build/main.css', type='text/css')
 	body
 		.site-wrapper
@@ -28,10 +26,17 @@ html
 										a About
 									li
 										a Contact
-					.inner.cover
+					#projects.inner.cover
+					#about.inner.cover
+						p About 
+						p Some stuff here
+					#contact.inner.cover
+						p Contact 
+						p Some stuff here
+					#home.inner.cover
 						h1.cover-heading Eduardo Velasco
 						p.lead Welcome to my portfolio.
-						p.lead
+						//- p.lead
 							span(class='glyphicon glyphicon-menu-right arrow')
 					.mastfoot
 						.inner
