--- a/views/main.pug
+++ b/views/main.pug
@@ -34,10 +34,8 @@ html
 						p Contact 
 						p Some stuff here
 					#home.inner.cover
-						h1.cover-heading Eduardo Velasco
+						p.cover-heading Eduardo Velasco
 						p.lead Welcome to my portfolio.
-						//- p.lead
-							span(class='glyphicon glyphicon-menu-right arrow')
 				.mastfoot
 					.inner
 						ul.social-links
