--- a/views/main.pug
+++ b/views/main.pug
@@ -10,6 +10,10 @@ html
 		meta(name='keywords', content='Eduardo Velasco, Eduardo, Velasco, portfolio, work, personal')
 		link(rel='stylesheet', href='/build/main.css', type='text/css')
 	body
+		.stars
+			#stars
+			#stars2
+			#stars3
 		.site-wrapper
 			.site-wrapper-inner
 				.cover-container
@@ -34,7 +38,7 @@ html
 						p Contact 
 						p Some stuff here
 					#home.inner.cover
-						p.cover-heading Eduardo Velasco
+						span.cover-heading Eduardo Velasco
 						p.lead Welcome to my portfolio.
 				.mastfoot
 					.inner
