--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -16,9 +16,9 @@
   display: inline-block !important;
 }
 .social-links a {
-  margin-right: 20px;
-  margin-left: 20px;
-  font-size: 2.1em;
+  margin-right: 13px;
+  margin-left: 13px;
+  font-size: 1.8em;
   color: white;
   text-decoration: none !important;
   transition: .4s ease;
@@ -73,7 +73,7 @@ html {
   
 body {
   height: 100%;
-  background-color: #333;
+  background-color: transparent;
   color: #fff;
   text-align: center;
 }
@@ -83,12 +83,18 @@ body {
 }
 .site-wrapper {
   display: table;
-  background: url('/img/apple.jpg');
-  background-size: cover;
-  background-position: center;
   width: 100%;
   height: 100%;
   min-height: 100%;
+}
+.bg {
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  background: url('/img/apple.jpg');
+  background-size: cover;
+  background-position: center;
+  z-index: -1;
 }
 .site-wrapper-inner {
   display: table-cell;
@@ -107,6 +113,7 @@ body {
   padding-bottom: 0 !important;
   margin: 0 !important;
   transition: all .5s ease-out;
+  white-space: pre-wrap !important;
 }
 .mastfoot{
   width: 100% !important;
@@ -120,12 +127,11 @@ body {
 .lead {
   @include elegant-snippet;
   transition: all .5s ease-out;
+  white-space: pre-wrap !important;
 }
 .masthead-brand {
   margin-top: 10px;
   margin-bottom: 10px;
-  font-family: "La Belle Aurore", cursive;
-  font-size: 2em;
 }
 .masthead-nav {
   display: block;
@@ -139,6 +145,9 @@ body {
   font-weight: normal !important;
   transition: .4s ease;
   cursor: pointer;
+  line-height: 55px !important;
+  padding-top: 0 !important;
+  padding-bottom: 0 !important;
   &:hover {
     background-color: transparent !important;
     color: rgba(255, 255, 255, .6);  
@@ -159,9 +168,9 @@ body {
 }
 .project {
   background-color: red;
-  height: 150px;
+  height: 160px;
   padding: 20px;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
   border-radius: 5px;
   background-size: cover !important;
 }
@@ -177,14 +186,18 @@ body {
 }
 @media (max-width: 768px) {
   .cover-heading {
-    font-size: 3.5em;
+    font-size: 2.3em;
+    letter-spacing: 0px;
   } 
+  .project {
+    margin-bottom: 30px !important;
+  }
 }
 @media (min-height: 750px) {
   #projects {
     height: 600px;
   }
-  .projects {
+  .project {
     height: 150px !important;
   }
 }
