Cleaned up code

--- a/views/main.pug
+++ b/views/main.pug
@@ -44,7 +44,4 @@ html
 					#home.inner.cover
 						span.cover-heading Eduardo Velasco
 						p.lead Welcome to my portfolio.
-				//- .mastfoot
-					.inner
-						
-		script(src="/build/portfolio.js" type="text/javascript")
+		script(src="/build/main.js" type="text/javascript")
