--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -1,253 +1,128 @@
 @import url('http://fonts.googleapis.com/css?family=Raleway:300,500,700');
-@import url('http://fonts.googleapis.com/css?family=Roboto:300,500,700');
-@import url('http://fonts.googleapis.com/css?family=La+Belle+Aurore');
 @import url('http://weloveiconfonts.com/api/?family=entypo');
 @import url('/bootstrap/css/bootstrap.css');
-// @import 'stars';
-//social icons
-[class*="entypo-"]:before {
-  font-family: 'entypo', sans-serif;
-}
-.social-links {
-  list-style: none !important;
-  padding: 0 !important;
-}
-.social-links li {
-  display: inline-block !important;
-}
-.social-links a {
-  margin-right: 13px;
-  margin-left: 13px;
-  font-size: 1.8em;
-  color: white;
-  text-decoration: none !important;
-  transition: .4s ease;
-  &:hover {
-    color: rgba(255, 255, 255, .6);  
-  }
-}
-//arrow
-@keyframes bounce {
-  0%, 20%, 50%, 80%, 100% {
-    right: 0;
-  }
-  40% {
-    right: -25px;
-  }
-  60% {
-    right: -12px;
-  }
-}
-.arrow {
-  cursor: pointer;
-  font-size: 1.4em;
-  color: rgba(255, 255, 255, .5);
-  animation: bounce 1.8s infinite;
-}
-//mixins
-@mixin elegant($size) { 
-  font-family: Raleway;
-  text-transform: uppercase;
-  letter-spacing: 5px;
-  font-size: $size;
-  color: white;
-}
-@mixin elegant-snippet { 
-  font-family: Raleway;
-  letter-spacing: 2px;
-  color: white;
-}
-@mixin shade($x, $y, $z, $o) {
-  -moz-box-shadow:    inset $x $y $z rgba(1, 1, 1, $o);
-  -webkit-box-shadow: inset $x $y $z rgba(1, 1, 1, $o);
-  box-shadow:         inset $x $y $z rgba(1, 1, 1, $o);
-}
-//variables
-$font-stack: Helvetica, sans-serif;
-$primary-color: green;
-//cover page
+@import 'mixins';
+@import 'nav';
+@import 'projects';
+//main 
 html {
-  height: 100%;
-  background-color: #333;
+	height: 100%;
+	background-color: #333;
 }
-  
 body {
-  height: 100%;
-  background-color: transparent;
-  color: #fff;
-  text-align: center;
-}
-.trans{
-  letter-spacing: -30px !important;
-  opacity: 0;
+	height: 100%;
+	background-color: transparent;
+	color: #fff;
+	text-align: center;
 }
 .site-wrapper {
-  display: table;
-  width: 100%;
-  height: 100%;
-  min-height: 100%;
+	display: table;
+	width: 100%;
+	height: 100%;
+	min-height: 100%;
 }
 .bg {
-  position: fixed;
-  height: 100%;
-  width: 100%;
-  background: url('/img/apple.jpg');
-  background-size: cover;
-  background-position: center;
-  z-index: -1;
-  filter: hue-rotate(180deg);
+	position: fixed;
+	height: 100%;
+	width: 100%;
+	background: url('/img/apple.jpg');
+	background-size: cover;
+	background-position: center;
+	z-index: -1;
+	filter: hue-rotate(180deg);
 }
 .site-wrapper-inner {
-  display: table-cell;
-  vertical-align: top;
+	display: table-cell;
+	vertical-align: top;
 }
 .cover-container {
-  margin-right: auto;
-  margin-left: auto;
+	margin-right: auto;
+	margin-left: auto;
 }
 .cover-heading {
-  font-family: "Raleway";
-  font-size: 4.5em;
-  text-transform: uppercase;
-  letter-spacing: 7px;
-  line-height: 80px;
-  padding-bottom: 0 !important;
-  margin: 0 !important;
-  transition: all .5s ease-out;
-  white-space: pre-wrap !important;
+	font-family: "Raleway";
+	font-size: 4.5em;
+	text-transform: uppercase;
+	letter-spacing: 7px;
+	line-height: 80px;
+	padding-bottom: 0 !important;
+	margin: 0 !important;
+	transition: all .5s ease-out;
+	white-space: pre-wrap !important;
 }
 .mastfoot{
-  width: 100% !important;
+	width: 100% !important;
 }
 .inner {
-  padding-top: 30px;
-  padding-left: 30px;
-  padding-right: 30px;
-  padding-bottom: 10px;
+	padding-top: 30px;
+	padding-left: 30px;
+	padding-right: 30px;
+	padding-bottom: 10px;
 }
 .lead {
-  @include elegant-snippet;
-  transition: all .5s ease-out;
-  white-space: pre-wrap !important;
-}
-.masthead-brand {
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-.masthead-nav {
-  display: block;
-  position: relative;
-}
-.masthead-nav > li {
-    display: inline-block;
-}
-.masthead-nav li a {
-  @include elegant(1.1em);
-  font-weight: normal !important;
-  transition: .4s ease;
-  cursor: pointer;
-  line-height: 58px !important;
-  padding-top: 0 !important;
-  padding-bottom: 0 !important;
-  &:hover {
-    background-color: transparent !important;
-    color: rgba(255, 255, 255, .6);  
-  }
-  &:focus {
-    background-color: transparent !important;
-  }
+	@include elegant-snippet;
+	transition: all .5s ease-out;
+	white-space: pre-wrap !important;
 }
 #projects, #about, #contact{
-  display: none;
+	display: none;
 }
-#projects {
-  background-color: transparent;
-  height: 500px;
-  overflow: hidden;
-  padding-top: 20px;
-  padding-bottom: 10px;
-}
-.project {
-  background-color: red;
-  height: 160px;
-  padding: 20px;
-  margin-bottom: 20px;
-  border-radius: 5px;
-  background-size: cover !important;
-  transition: filter .4s ease-out;
-  cursor: pointer;
-  &:hover {
-    filter: brightness(1.7);
-  }
-}
-.project-title,.project-subtitle, .project-tech {
-  margin: 0 !important;
-  text-align: left !important;
-}
-.project-title {
-  @include elegant(1.8em);
-}
-.project-subtitle {
-  @include elegant-snippet;
-}
-.project-tech {
-  @include elegant-snippet; 
-}
+//media queries
 @media (max-width: 768px) {
-  .cover-heading {
-    font-size: 2.3em;
-    letter-spacing: 0px;
-  } 
-  .project {
-    margin-bottom: 30px !important;
-  }
+	.cover-heading {
+		font-size: 2.3em;
+		letter-spacing: 0px;
+	} 
+	.project {
+		margin-bottom: 30px !important;
+	}
 }
 @media (min-height: 750px) {
-  #projects {
-    height: 600px;
-  }
-  .project {
-    height: 150px !important;
-  }
+	#projects {
+		height: 600px;
+	}
+	.project {
+		height: 150px !important;
+	}
 }
 @media (min-width: 1000px) {
-  .cover-container {
-    width: 70% !important;
-  }
+	.cover-container {
+		width: 70% !important;
+	}
 }
 @media (min-width: 768px) {
-  .masthead-brand {
-    float: left;
-  }
-  .masthead-nav {
-    float: right;
-  }
-  .cover {
-    padding: 0 20px;
-  }
-  .btn-lg {
-    padding: 10px 20px;
-    font-weight: bold;
-  }
+	.masthead-brand {
+		float: left;
+	}
+	.masthead-nav {
+		float: right;
+	}
+	.cover {
+		padding: 0 20px;
+	}
+	.btn-lg {
+		padding: 10px 20px;
+		font-weight: bold;
+	}
 }
 @media (min-width: 768px) {
-  .masthead {
-    position: fixed;
-    top: 0;
-  }
-  .mastfoot {
-    position: fixed;
-    bottom: 0;
-  }
-  .site-wrapper-inner {
-    vertical-align: middle;
-  }
-  .masthead, .mastfoot, .cover-container {
-    width: 100%;
-  }
+	.masthead {
+		position: fixed;
+		top: 0;
+	}
+	.mastfoot {
+		position: fixed;
+		bottom: 0;
+	}
+	.site-wrapper-inner {
+		vertical-align: middle;
+	}
+	.masthead, .mastfoot, .cover-container {
+		width: 100%;
+	}
 }
 @media (min-width: 992px) {
-  .masthead, .mastfoot, .cover-container {
-    width: 700px;
-  }
+	.masthead, .mastfoot, .cover-container {
+		width: 700px;
+	}
 }
