Added project technologies.

--- a/public/sass/projects.scss
+++ b/public/sass/projects.scss
@@ -31,5 +31,7 @@
 	@include elegant-snippet;
 }
 .project-tech {
-	@include elegant-snippet; 
+	@include elegant-snippet;
+	margin-top: 20px !important;
+	color: #DCDCDC; 
 }
