--- a/views/main.pug
+++ b/views/main.pug
@@ -35,13 +35,15 @@ html
 									li
 										a Contact
 					#projects.inner.cover
-					#about.inner.cover
-						p About 
-						p Some stuff here
 					#contact.inner.cover
 						p Contact 
 						p Some stuff here
 					#home.inner.cover
 						span.cover-heading Eduardo Velasco
 						p.lead Welcome to my portfolio.
+					#about.inner.cover     
+						p.about About Me
+						p.about-info I'm a twenty-three year old programmer living in Austin, Texas. I developed a passion for programming in high school, and I have come a long way since. I embrace new opportunities to learn independently, and I am all about a hands-on approach to development. 
+						p.about-info Don't let my portfolio fool you into thinking I'm only about coding! It is my fascination with Mathematics that gives rise to my interest in the theoretical aspect of CS. I like to take an analytical approach when solving programming problems. When I'm away from the keyboard, I like to stay fit, read anything from non-fiction to high fantasy, and play chess.
+						//- span(class="entypo-right-open-big about-slide right bounce")
 		script(src="/build/main.js" type="text/javascript")
