--- a/public/sass/about.scss
+++ b/public/sass/about.scss
@@ -1,5 +1,15 @@
 @import 'mixins';
-
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    right: 0;
+  }
+  40% {
+    right: -20px;
+  }
+  60% {
+    right: -10px;
+  }
+}
 .about {
 	@include elegant(3em);
 	letter-spacing: 6px !important;
@@ -14,6 +24,17 @@
 	display: block; 
 	margin: 0 auto;
 	margin-top: 35px;
-	margin-bottom: 10px;
 	text-align: justify;
+}
+.arrow {
+	float: left;
+	padding-left: 10%;
+	padding-top: 30px;
+	padding-bottom: 20px;
+	opacity: .7;
+	font-size: 2em;
+	cursor: pointer;
+}
+.bounce {
+	animation: bounce 2s infinite;
 }
