Added basic contact pageg

--- a/views/main.pug
+++ b/views/main.pug
@@ -36,8 +36,10 @@ html
 										a Contact
 					#projects.inner.cover
 					#contact.inner.cover
-						p Contact 
-						p Some stuff here
+						input(placeholder="Name" id='name')
+						input(type="email" placeholder="Email" id='email') 
+						textarea(rows="7" placeholder="Message" id='msg')
+						.send send
 					#home.inner.cover
 						span.cover-heading Eduardo Velasco
 						p.lead Welcome to my portfolio.
