--- a/public/sass/projects.scss
+++ b/public/sass/projects.scss
@@ -14,7 +14,7 @@
 	margin-bottom: 10px;
 	border-radius: 5px;
 	background-size: cover !important;
-	transition: filter .4s ease-out;
+	transition: filter .3s ease-in;
 	cursor: pointer;
 	&:hover {
 		filter: brightness(1.7);
