--- a/public/sass/contact.scss
+++ b/public/sass/contact.scss
@@ -30,8 +30,10 @@ input {
 	min-width: 120px;
 	margin: 0 auto;
 	margin-top: 30px;
+	margin-bottom: 30px !important;
 	cursor: pointer;
 	transition: all .3s ease-in;
+	user-select: none;
 	&:hover {
 		background-color: rgba(255, 255, 255, .3);
 	}
