--- a/views/main.pug
+++ b/views/main.pug
@@ -39,7 +39,8 @@ html
 						input(placeholder="Name" id='name')
 						input(type="email" placeholder="Email" id='email') 
 						textarea(rows="7" placeholder="Message" id='msg')
-						.send send
+						#send send
+						.error Please enter a valid
 					#home.inner.cover
 						span.cover-heading Eduardo Velasco
 						p.lead Welcome to my portfolio.
