--- a/views/main.pug
+++ b/views/main.pug
@@ -8,7 +8,7 @@ html
 		meta(name='author', content='Eduardo Velasco')
 		meta(name='description', content='Personal space of Eduardo Velasco')
 		meta(name='keywords', content='Eduardo Velasco, Eduardo, Velasco, portfolio, work, personal')
-		link(rel='stylesheet', href='/build/main.css', type='text/css')
+		link(rel='stylesheet', href='/build/main.min.css', type='text/css')
 	body
 		.bg
 		.site-wrapper
@@ -49,4 +49,4 @@ html
 						p.about-info I'm a twenty-three year old programmer living in Austin, Texas. I developed a passion for programming in high school, and I have come a long way since. I embrace new opportunities to learn independently, and I am all about a hands-on approach to development. 
 						p.about-info Don't let my portfolio fool you into thinking I'm only about coding! It is my fascination with Mathematics that gives rise to my interest in the theoretical aspect of CS. I like to take an analytical approach when solving programming problems. When I'm away from the keyboard, I like to stay fit, read anything from non-fiction to high fantasy, and play chess.
 						span(class="glyphicon glyphicon-menu-right arrow bounce")
-		script(src="/build/main.js" type="text/javascript")
+		script(src="/build/main.min.js" type="text/javascript")
