--- a/views/main.pug
+++ b/views/main.pug
@@ -9,6 +9,7 @@ html
 		meta(name='description', content='Personal space of Eduardo Velasco')
 		meta(name='keywords', content='Eduardo Velasco, Eduardo, Velasco, portfolio, work, personal')
 		link(rel='stylesheet', href='/build/main.min.css', type='text/css')
+		link(rel="icon" type="image/x-icon" href="/img/sigma.png")
 	body
 		.bg
 		.site-wrapper
