--- a/views/main.pug
+++ b/views/main.pug
@@ -8,7 +8,7 @@ html
 		meta(name='author', content='Eduardo Velasco')
 		meta(name='description', content='Personal space of Eduardo Velasco')
 		meta(name='keywords', content='Eduardo Velasco, Eduardo, Velasco, portfolio, work, personal')
-		link(rel='stylesheet', href='/build/main.min.css', type='text/css')
+		link(rel='stylesheet', href='/build/main.css', type='text/css')
 	body
 		.bg
 		.site-wrapper
