--- a/views/main.pug
+++ b/views/main.pug
@@ -19,11 +19,11 @@ html
 							.masthead-brand 
 								ul.social-links
 									li 
-										a(class="entypo-twitter icon" href="https://twitter.com/velascoDev" target="blank")
+										a(class='entypo-twitter icon' href='https://twitter.com/velascoDev' target='blank')
 									li 
-										a(class="entypo-github icon" href="https://github.com/velascoDev" target="blank")
+										a(class='entypo-github icon' href='https://github.com/velascoDev' target='blank')
 									li 
-										a(class="entypo-linkedin icon" href="https://www.linkedin.com/in/ejvelasco/" target="blank")
+										a(class='entypo-linkedin icon' href='https://www.linkedin.com/in/ejvelasco/' target='blank')
 							nav
 								ul.nav.masthead-nav
 									li
@@ -36,9 +36,9 @@ html
 										a Contact
 					#projects.inner.cover
 					#contact.inner.cover
-						input(placeholder="Name" id='name')
-						input(type="email" placeholder="Email" id='email') 
-						textarea(rows="7" placeholder="Message" id='msg')
+						input(placeholder='Name' id='name')
+						input(type='email' placeholder='Email' id='email') 
+						textarea(rows='7' placeholder='Message' id='msg')
 						#send send
 						.error Please enter a valid
 					#home.inner.cover
@@ -48,5 +48,5 @@ html
 						p.about About Me
 						p.about-info I'm a twenty-three year old programmer living in Austin, Texas. I developed a passion for programming in high school, and I have come a long way since. I embrace new opportunities to learn independently, and I am all about a hands-on approach to development. 
 						p.about-info Don't let my portfolio fool you into thinking I'm only about coding! It is my fascination with Mathematics that gives rise to my interest in the theoretical aspect of CS. I like to take an analytical approach when solving programming problems. When I'm away from the keyboard, I like to stay fit, read anything from non-fiction to high fantasy, and play chess.
-						span(class="glyphicon glyphicon-menu-right arrow bounce")
-		script(src="/build/main.min.js" type="text/javascript")
+						span(class='glyphicon glyphicon-menu-right arrow bounce')
+		script(src='/build/main.min.js' type='text/javascript')
